--- a/app/src/main/res/layout/itemhome.xml
+++ b/app/src/main/res/layout/itemhome.xml
@@ -1,7 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="20dp"
+        android:layout_height="250dp">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            app:cardCornerRadius="20dp"
+            android:layout_gravity="end"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_margin="10dp"
+
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:background="@drawable/heart"/>
+
+        </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/Image"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+    </androidx.cardview.widget.CardView>
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_marginEnd="15dp"
+       android:layout_marginStart="5dp"
+       android:layout_marginTop="5dp"
+       android:layout_marginBottom="15dp"
+       android:orientation="vertical"
+       android:layout_height="wrap_content">
+
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:textSize="17dp"
+           android:text="White shirt"/>
+       <LinearLayout
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="match_parent">
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:fontFamily="sans-serif-medium"
+                   android:layout_height="wrap_content"
+                   android:textColor="@color/black"
+                   android:textSize="15sp"
+                   android:text="$"/>
+               <TextView
+                   android:layout_marginStart="5dp"
+                   android:layout_width="wrap_content"
+                   android:fontFamily="sans-serif-medium"
+                   android:layout_height="wrap_content"
+                   android:textColor="@color/black"
+                   android:textSize="20sp"
+                   android:text="72.00"/>
+           </LinearLayout>
+
+           <androidx.constraintlayout.widget.ConstraintLayout
+               android:layout_width="match_parent"
+               android:layout_gravity="end"
+               android:layout_height="match_parent">
+
+               <ImageView
+                   android:layout_width="20dp"
+                   android:layout_height="20dp"
+                   android:layout_gravity="end"
+                   android:background="@drawable/plus"
+                   app:layout_constraintBottom_toBottomOf="parent"
+                   app:layout_constraintEnd_toEndOf="parent"
+                   app:layout_constraintTop_toTopOf="parent" />
+           </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+       </LinearLayout>
+
+   </LinearLayout>
+
 
 </LinearLayout>
