--- a/app/src/main/res/layout/itemhome.xml
+++ b/app/src/main/res/layout/itemhome.xml
@@ -42,6 +42,7 @@
        android:layout_height="wrap_content">
 
        <TextView
+           android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
@@ -61,6 +62,7 @@
                    android:textSize="15sp"
                    android:text="$"/>
                <TextView
+                   android:id="@+id/price"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:fontFamily="sans-serif-medium"
